--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -10,32 +10,20 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
+// Style the link and custom underline
 main a,
 footer a {
+  box-shadow: inset 0 0 0 0 transparentize($blue-300, 0.4);
   color: $blue-600;
   font-weight: 700;
   position: relative;
   text-decoration: none;
-
-  &::after {
-    background: $blue-300;
-    bottom: 4px;
-    content: '';
-    height: 0;
-    left: 0;
-    position: absolute;
-    transition: 0.1s ease-in-out;
-    width: 100%;
-    z-index: -1;
-  }
+  transition: 0.1s ease-in-out;
 
   @media (hover: hover) {
     &:hover {
+      box-shadow: inset 0 -13px 0 0 transparentize($blue-300, 0.4);
       color: $blue-700;
-
-      &::after {
-        height: line-height(default) * 0.3;
-      }
     }
   }
 }
